[package]
name = "kc-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["middleware"]
authz = []
middleware = ["tonic"]

[dependencies]
chrono = { version = "0", features = ["serde"] }
jsonwebtoken = { version = "9" }
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["chrono_0_4"] }
thiserror = { version = "1.0.49" }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
tracing = { version = "0" }

# optional dependencies
tonic = { version = "0", default-features = false, optional = true }
