[package]
name = "kc-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["middleware"]
authz = []
middleware = ["tonic"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde"]

[dependencies.jsonwebtoken]
version = "9.2"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "3.4"
features = ["chrono"]

[dependencies.thiserror]
version = "1.0"
default-features = false

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies.url]
version = "2.5"
default-features = false
features = ["serde"]

[dependencies.uuid]
version = "1.6"
features = ["serde"]

[dependencies.tonic]
version = "0.10"
default-features = false
optional = true
