[package]
name = "kc-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["middleware"]
authz = []
middleware = ["dep:http", "dep:tonic", "dep:tower"]

[dependencies.arcstr]
version = "1.2"
default-features = false
features = ["serde"]

[dependencies.bytes]
version = "1.6"
default-features = false
features = ["std"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde"]

[dependencies.http]
version = "1.1"
optional = true

[dependencies.jsonwebtoken]
version = "9.3"

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "3.9"
features = ["chrono"]

[dependencies.thiserror]
version = "1.0"
default-features = false

[dependencies.tokio]
version = "1.38"
default-features = false
features = ["sync"]

[dependencies.tonic]
version = "0.12"
default-features = false
optional = true

[dependencies.tower]
version = "0.4"
default-features = false
optional = true

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies.url]
version = "2.5"
default-features = false
features = ["serde"]

[dependencies.uuid]
version = "1.10"
features = ["serde"]
